--- a/demo/web/out.css
+++ b/demo/web/out.css
@@ -77,7 +77,7 @@
     color: rgba(250, 250, 250, var(--tw-text-opacity, 1))
 }
 .text-_bcolor_c32rpx_B {
-    color: 32rpx
+    font-size: 32rpx
 }
 .decoration-_b3rpx_B {
     text-decoration-thickness: 3rpx
