--- a/e2e/__snapshots__/native/vite-native/app.wxss
+++ b/e2e/__snapshots__/native/vite-native/app.wxss
@@ -26,6 +26,7 @@ text,
 }
 page,
 .tw-root,
+wx-root-portal-content,
 :host {
   --color-red-700: rgb(191, 0, 15);
   --color-amber-300: rgb(255, 210, 55);
@@ -41,6 +42,7 @@ page,
 @supports (color: color(display-p3 0 0 0%)) {
   page,
   .tw-root,
+  wx-root-portal-content,
   :host {
     --color-red-700: rgb(191, 0, 16);
     --color-amber-300: rgb(255, 210, 55);
@@ -52,6 +54,7 @@ page,
   @media (color-gamut: p3) {
     page,
     .tw-root,
+    wx-root-portal-content,
     :host {
       --color-red-700: color(display-p3 0.69274 0.11623 0.10468);
       --color-amber-300: color(display-p3 0.97433 0.83063 0.33298);
