--- a/packages/postcss/test/fixtures/css/v4.1.1-uniapp-vue3.out.css
+++ b/packages/postcss/test/fixtures/css/v4.1.1-uniapp-vue3.out.css
@@ -11,7 +11,7 @@ view,text,:before,:after,::backdrop {
 
 }
 
-page,:host {
+page,.tw-root,wx-root-portal-content,:host {
   --color-white: #fff;
   --spacing: .25rem;
   --font-weight-bold: 700;
