--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.css
@@ -35,7 +35,7 @@ view,text,::before,::after,::backdrop {
       border-style: solid;
       border-color: currentColor;
     }
-page,.tw-root,:host {
+page,.tw-root,wx-root-portal-content,:host {
   --color-zinc-800: rgb(39, 39, 42);
 }
 view,text,:after,:before,::backdrop {
