--- a/packages/postcss/test/fixtures/css/v4.1.2-vite-plugin.format.out.css
+++ b/packages/postcss/test/fixtures/css/v4.1.2-vite-plugin.format.out.css
@@ -16,19 +16,19 @@ view,text,:before,:after,::backdrop {
       --tw-gradient-to-position: 100%
     }
 
-page,:host {
+page,.tw-root,wx-root-portal-content,:host {
   --color-red-700: rgb(191, 0, 15);
   --color-amber-300: rgb(255, 210, 55);
   --spacing: .25rem
 }
 
 @supports (color: color(display-p3 0 0 0%)) {
-page,:host {
+page,.tw-root,wx-root-portal-content,:host {
   --color-red-700: rgb(191, 0, 16);
   --color-amber-300: rgb(255, 210, 55)}
 
 @media (color-gamut: p3) {
-page,:host {
+page,.tw-root,wx-root-portal-content,:host {
   --color-red-700: color(display-p3 0.69274 0.11623 0.10468);
   --color-amber-300: color(display-p3 0.97433 0.83063 0.33298)}
 }
