--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-default-output.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-default-output.css
@@ -1,4 +1,4 @@
-page,.tw-root,:host {
+page,.tw-root,wx-root-portal-content,:host {
     --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans, sans-serif, "Apple Color Emoji",
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
@@ -377,7 +377,7 @@ page,.tw-root,:host {
   }
 
 @supports (color: color(display-p3 0 0 0%)) {
-page,.tw-root,:host {
+page,.tw-root,wx-root-portal-content,:host {
     --color-red-200: rgb(255, 202, 202);
     --color-red-300: rgb(255, 163, 164);
     --color-red-400: rgb(255, 101, 104);
@@ -476,7 +476,7 @@ page,.tw-root,:host {
   }
 
 @media (color-gamut: p3) {
-page,.tw-root,:host {
+page,.tw-root,wx-root-portal-content,:host {
     --color-red-200: color(display-p3 0.96956 0.79815 0.7943);
     --color-red-300: color(display-p3 0.95692 0.65189 0.64512);
     --color-red-400: color(display-p3 0.93353 0.43168 0.42349);
